# fastapi-virtual-storage

./: .gitignore  README.md  compose.yaml  pyproject.toml
app/: dependencies.py  main.py
app/api/: __init__.py  file.py  folder.py  healthcheck.py
app/core/: admin.py  config.py
app/db/: models.py  session.py
app/db/crud/: __init__.py  file.py  folder.py
app/schemas/: __init__.py  common.py  file.py  folder.py
app/services/: __init__.py  file_disc_service.py  file_service.py  folder_disc_service.py  folder_service.py
app/utils/: exceptions.py  validators.py
migrations/: env.py
